Fix z-index second-section-content

--- a/src/styles.css
+++ b/src/styles.css
@@ -21,7 +21,7 @@ header{
   width: 100%;
   height: 9vh;
 
-  z-index: 1;
+  z-index: 10;
 }
 
 header a{
@@ -36,7 +36,7 @@ header a img{
 }
 /* HEADER FIM */ 
 
-/* PRIMEIRA SESSÃO INICIO */
+/* PRIMEIRA SEÇÃO INICIO */
 #first-section{
   display: flex;
   justify-content: center;
@@ -155,8 +155,7 @@ header a img{
   border-bottom-right-radius: 16px;
 }
 
-/* PRIMEIRA SESSÃO FIM */
-
+/* PRIMEIRA SEÇÃO FIM */
 
 
 /* SEGUNDA SESSÃO INICIO */
@@ -203,7 +202,7 @@ header a img{
   margin-bottom: 2rem;
   line-height: 70px;
   font-size: 65px;
-  font-family: IBM Plex Serif,serif;
+  font-family: 'IBM Plex Serif',serif;
 }
 
 #second-section .second-section-content .second-section-text p{
@@ -214,7 +213,7 @@ header a img{
   padding: 10px;
   text-align: center;
   font-size: 14px;
-  font-family: IBM Plex Serif,serif;
+  font-family: 'IBM Plex Serif',serif;
   }
 
 #second-section .lista-second-section {
@@ -228,6 +227,8 @@ header a img{
   box-sizing: border-box;
   margin-top: 64px;
   margin-bottom: -56px;
+
+  z-index: 1;
 }
 
 #second-section .lista-second-section ul{
@@ -238,7 +239,7 @@ header a img{
   padding: 0;
   margin: 0;
   text-align: center;
-  font-family: IBM Plex Serif,serif;
+  font-family: 'IBM Plex Serif',serif;
 }
 
 #second-section .lista-second-section .mais{
@@ -264,7 +265,7 @@ header a img{
 
 /* SEGUNDA SESSÃO FIM */
 
-/* TERCEIRA SESSÃO INÍCIO */
+/* TERCEIRA SEÇÃO INÍCIO */
 
 #third-section{
   display: flex;
@@ -376,4 +377,4 @@ header a img{
   font-weight: 400;
 }
 
-/* TERCEIRA SESSÃO FIM */
+/* TERCEIRA SEÇÃO FIM */
